# requestsbankrko

./: .gitignore  README.md  VTBToken.txt  git_commit.py  pyproject.toml  requirements.txt  tests.py  update_library_version.py
.github/workflows/: all_tests.yml  build_lib.yml
src/: __init__.py  bank_methods.py  open_methods.py  tests.py  vtb_api_token.json  zip_functions.py
tests/: NoneCityBankes.json  Nonetest_do_json_AlfaCity.json  proxies.txt  session_methods.py  test_bank_methods.py  vtb_api_token.json
